# project_1_Rassokhin_M25-555

./: .gitignore  Makefile  README.md  demo.cast  pyproject.toml  structure.txt
labyrinth_game/: constants.py  main.py  player_actions.py  utils.py
